sass/thread.scss
.thing .entry {
	margin-top: 10px;
}

// fix for collapsed comments jerking about
.thing.comment .entry {
	margin-left: 42px;
}

.link .usertext-body .md {
	background-color: $grey_background;
	border: 1px solid $grey_border;
	border-radius: 2px;

	// This should make the width of self posts full width with the actual copy constrained to 40em, sort of
	// like how comments work.
	max-width: unset;
	p {
		max-width: 60em;
	}
}

.linkinfo {
	background: $grey_background;
	border: 1px solid $grey_border;
	border-radius: 0px;
	padding-bottom: 0px;
	border-bottom: none;
	.date {
		border-bottom: 2px solid #0c1619;
		padding: 5px 0;
		&:before {
			content: "Submitted ";
		}
		span {
			display: none;
		}
	}
	.shortlink {
		font-size: 0;
		input {
			margin-top: 10px;
			margin-left: -6px;
			background: $grey_background_2;
			border: 1px solid $grey_border;
			color: #ddd;
			width: 298px;
			padding: 10px 0px;
			text-align: center;
			font-size: 14px;
		}
	}
}

textarea {
	color: $grey_text;
	background-color: $grey_background;
	border: 1px solid $grey_border;
}

.comment {
	background-color: $grey_background;
	border-radius: 3px;
	border: 1px solid $grey_border !important;
	position: relative;
	outline: none;
	color: #fff !important;
	padding-top: 0px !important;
	margin: 10px;

	.child, .showreplies {
		border-left: none;
	}

	.comment {
		background-color: $grey_background_2 !important;
		.comment {
			background-color: $grey_background !important;
			.comment {
				background-color: $grey_background_2 !important;
				.comment {
					background-color: $grey_background !important;
					.comment {
						background-color: $grey_background_2 !important;
						.comment {
							background-color: $grey_background !important;
							.comment {
								background-color: $grey_background_2 !important;
							}
						}
					}
				}
			}
		}
	}
}

.usertext.border .usertext-body {
	/* @TODO Style better */
	//color: $title;
	background-color: transparent !important;
}

.single-page .link .rank {
	display: block;
	width: 2.2ex !important;
}

// maybe RES
span.score {
	color: $light_text !important;
}

//new comments, obviously.
.new-comment {
	// remove reddit's highlighting
	.usertext-body {
		background-color: transparent !important;
		border: none;
	}
	// add our own
	.entry:before {
		content: '';
		display: inline-block;
		float: right;
		margin-right: 10px;
		@include sprite($exclamation-fw);
	}
}

.usertext-edit {
	a {
		color: $title;
		&:hover {
			color: darken($title, 20%) !important;
		}
	}
}

.reddit-infobar.with-icon::before {
	background-color: $wow_btn_warning_background;
}

.comment.noncollapsed .midcol {
	margin-left: 30px;
	margin-right: 10px;
}

.commentarea .comment a.expand {
	position: absolute;
	top: 0;
	left: 0;
	padding: 4px 4px 0;
	height: 100%;
	opacity: .5;
	box-sizing: border-box;
	transition: 200ms;

	&:hover {
		background: $green_title;
	}
}

